Fixed front page box and footer spacing

--- a/docroot/sites/all/themes/dressitalian/css/page.css
+++ b/docroot/sites/all/themes/dressitalian/css/page.css
@@ -100,7 +100,7 @@ h1#page-title {
 	border-top: 1px solid #C2C2C2;
 	padding-top:10px;
 }
-.front #footer-region {
+.front #footer {
 	padding-top:30px;
 }
 #footer-region a {
@@ -619,7 +619,7 @@ a.boxout-grey {
 	text-indent: -10000px;
 	position: absolute;
 	z-index: 1000;
-	top: 368px;
+	top: 528px;
 }
 .view-frontpage a.views_slideshow_singleframe_previous {
 	background-position: 0 0;
